# isp_ras_internship

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Passes.h  Passes.td  README.md  lr-mlir-opt.cpp
include/: CMakeLists.txt
include/LATool/: Passes.h  Passes.td
include/LifeRange/: CMakeLists.txt  Passes.h  Passes.h.inc  Passes.td
lib/: CMakeLists.txt
lib/LifeRange/: CMakeLists.txt  LifeRangePass.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test1.mlir  test2.mlir  test3.mlir  test4.mlir  test5.mlir  test6.mlir
test/LifeRange/: test1.mlir  test2.mlir  test3.mlir  test4.mlir  test5.mlir  test6.mlir
tools/: CMakeLists.txt
tools/lr-mlir-opt/: CMakeLists.txt  lr-mlir-opt.cpp
